--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
   <table cellspacing="15">
     <tr>
       <td>
-        <img src="C:\Users\Ryan singhal\Desktop\circle-cropped ryan.png" alt="Ryan's Profile Picture">
+        <img src="/images/circle-cropped_ryan.png" alt="Ryan's Profile Picture">
       </td>
       <td>
         <em>
           <h2>Ryan Singhal</h2>
         </em>
         <em>
-          <h2>A student of <strong><a href="https://www.lotusvalley.com/">📚Lotus Valley International School📚</a></strong></h2>
+          <h2>A student of <strong><a href="https://www.lotusvalley.com/">📚Lotus Valley International
+                School📚</a></strong></h2>
         </em>
         <em>
           <h2>I am in 8th grade.I love coding,travelling and playing video games.</h2>
@@ -31,14 +32,14 @@
   <hr size="4" noshade />
   <strong>
     <em>
-      <h2><a href="My Hobbies.html">My hobbies</a></h2>
+      <h2><a href="hobbies.html">My hobbies</a></h2>
     </em>
   </strong>
   <strong>
-    <h2><a href="My Contact Information.html"><em>My Contact Information</em></a></h2>
+    <h2><a href="contact.html"><em>My Contact Information</em></a></h2>
   </strong>
   <strong>
-    <h2><a href="About me.html"><em>About me</em></a></h2>
+    <h2><a href="about.html"><em>About me</em></a></h2>
   </strong>
 
 
