--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <table cellspacing="15">
     <tr>
       <td>
-        <img src="images/circle-cropped_ryan.png" alt="Ryan's Profile Picture">
+        <img src="https://github.com/IMRYANSINGHAL/Info/blob/main/images/circle-cropped_ryan.png"
+          alt="Ryan's Profile Picture">
       </td>
       <td>
         <em>
